# rtcom-eventlogger-async

./: AUTHORS  ChangeLog  Makefile.am  configure.ac  rtcom-eventlogger-async-uninstalled.pc.in  rtcom-eventlogger-async.pc.in  rtcomeventlogger.events.EventsBook.service.in
debian/: changelog  control  copyright  rtcom-eventlogger-async.install  rules
src/: Makefile.am  eventlogger-async-client.c  eventlogger-async-server.c  rtcom-eventlogger-async.xml
src/rtcom-eventlogger/: eventlogger-async.h
tests/: Makefile.am  test.h  test_id.c  test_query.c
